# blogforge

./: .cfignore  .dockerignore  .env.local.example  .gitignore  CHANGELOG.md  Makefile  README.md  biome.json  docker-compose.local.yml  docker-compose.yml  manifest.yml  playwright.config.ts  pyproject.toml  requirements.txt  vars.example.yml
.github/workflows/: api-tests.yml  version-check.yml  web-tests.yml
.superpowers/sdd/: final-fixes-report.md
deploy/: com.baskettecase.blogforge.plist
design-previews/: index.html  notebook-soft.html  writer-quiet.html
docs/: cf-deploy.md  github-oauth-setup.md  home-services-deploy.md
docs/superpowers/plans/: 2026-05-26-pencraft-v1.md  2026-05-27-auth-multi-tenant-postgres.md  2026-05-28-linkedin-connector.md  2026-05-28-research-stage-references.md  2026-06-16-liquid-glass-ui.md  2026-06-16-voice-profile-and-samples.md  2026-06-17-writing-studio.md  2026-06-18-github-oauth-login.md  2026-06-19-absorb-myvoice.md  2026-06-19-bound-tanzu-models.md  2026-06-19-cf-buildpack-deploy.md  2026-06-19-linkedin-import.md  2026-06-19-per-user-api-keys.md  2026-06-19-voice-markdown-export.md  2026-06-23-ux-improvements.md  2026-07-02-geo-enhancements.md  2026-07-02-geo-optimize-ux.md  2026-07-02-source-urls-at-compose-start.md  2026-07-02-tracked-changes.md  2026-07-07-humanize-pass.md  2026-07-08-blogforge-public-host-deploy.md  2026-07-08-editing-geo-voice-improvements.md  2026-07-08-prefer-claude-cli-provider.md  2026-07-09-rules-refresh-and-help-page.md  2026-07-15-checkup-review-standardization.md  2026-07-15-codex-cli-provider.md  2026-07-16-home-services-deploy.md  2026-07-17-codex-draft-provider-hotfix.md  2026-07-17-github-publishing.md  2026-07-17-publish-hero-image.md  2026-07-17-version-increment-enforcement.md
docs/superpowers/specs/: 2026-05-26-pencraft-v1-design.md  2026-05-27-admin-managed-api-keys-design.md  2026-05-27-auth-multi-tenant-postgres-design.md  2026-05-27-research-stage-and-references-design.md  2026-05-28-linkedin-connector-design.md  2026-05-28-research-stage-references-v2-design.md  2026-06-16-liquid-glass-ui-design.md  2026-06-16-voice-profile-and-samples-design.md  2026-06-17-writing-studio-design.md  2026-06-18-github-oauth-login-design.md  2026-06-18-interactive-lint-design.md  2026-06-18-interview-mode-design.md  2026-06-18-voice-background-sources-design.md  2026-06-19-absorb-myvoice-design.md  2026-06-19-bound-tanzu-models-design.md  2026-06-19-cf-buildpack-deploy-design.md  2026-06-19-linkedin-import-design.md  2026-06-19-per-user-api-keys-design.md  2026-06-19-voice-markdown-export-design.md  2026-07-02-geo-enhancements-design.md  2026-07-02-geo-optimize-ux-design.md  2026-07-02-source-urls-at-compose-start-design.md  2026-07-02-tracked-changes-design.md  2026-07-07-humanize-pass-design.md  2026-07-08-blogforge-public-host-deploy-design.md  2026-07-08-editing-geo-voice-improvements-design.md  2026-07-08-prefer-claude-cli-provider-design.md  2026-07-09-geo-nonblocking-rescore-design.md  2026-07-09-rules-refresh-and-help-page-design.md  2026-07-15-checkup-review-standardization-design.md  2026-07-15-codex-cli-provider-design.md  2026-07-16-home-services-deploy-design.md  2026-07-17-codex-draft-provider-hotfix-design.md  2026-07-17-github-publishing-design.md  2026-07-17-publish-hero-image-design.md  2026-07-17-version-increment-enforcement-design.md
e2e/: draft-lifecycle.spec.ts
scripts/: cf-prepare.sh  check-version-bump.sh  deploy-home.sh  dev.sh  e2e-setup.sh  install-local.sh  redeploy.sh  rollback-home.sh  run-local.sh  serve-host.sh  serve-local.sh  serve-public.sh  start.sh  version.sh
