[project]
name = "pencraft"
version = "0.1.0"
description = "Local-first long-form drafting tool that uses myvoice style packs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dan Baskette" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-generativeai>=0.8",
    "aiofiles>=24",
    "python-multipart>=0.0.12",
    "myvoice>=0.1.0",
]

[project.scripts]
pencraft = "pencraft.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["packages/api/pencraft/static/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["packages/api/pencraft"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=1.0",
    "ruff>=0.13",
    "mypy>=2.0",
    "types-pyyaml>=6.0",
    "respx>=0.21",
    "types-aiofiles>=24",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["pencraft"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "packages/api"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["packages/api/tests"]
asyncio_mode = "auto"

[tool.uv.sources]
myvoice = { path = "../myvoice", editable = true }
