[project]
name = "pencraft"
version = "0.1.0"
description = "Local-first long-form drafting tool that uses myvoice style packs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dan Baskette" }]
dependencies = [
    "aiobotocore>=2.13",
    "aiofiles>=24",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "anthropic>=0.40",
    "argon2-cffi>=23.1",
    "asyncpg>=0.30",
    "click>=8.1",
    "cryptography>=43",
    "email-validator>=2.2",
    "fastapi>=0.115",
    "google-generativeai>=0.8",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "myvoice>=0.1.0",
    "openai>=1.50",
    # asyncpg is the async runtime driver; psycopg2-binary covers alembic
    # migrations (env.py strips +asyncpg from the URL, so sqlalchemy
    # reaches for psycopg2 by default).
    "psycopg2-binary>=2.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pypdf>=5.0",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "trafilatura>=2.0",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
pencraft = "pencraft.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["packages/api/pencraft/static/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["packages/api/pencraft"]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1",
    "moto[s3]>=5.0",
    "mypy>=2.0",
    "pytest>=8.3",
    "pytest-asyncio>=1.0",
    "respx>=0.21",
    "ruff>=0.13",
    "types-aiofiles>=24",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# B008: FastAPI's Depends()/Query()/etc. are intentionally called in default-arg
# position. The rule is meant for "expensive sentinels"; FastAPI's helpers are
# the idiomatic exception across the framework.
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["pencraft"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "packages/api"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "myvoice.*"
ignore_missing_imports = true

# Tests don't need full strict-mode annotations (e.g. `-> None` on every test).
# Production code still under strict.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = false
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
testpaths = ["packages/api/tests"]
asyncio_mode = "auto"

[tool.uv.sources]
myvoice = { path = "../myvoice", editable = true }
